@@ -105,6 +105,7 @@ jshirley: J. Shirley <jshirley@gmail.com>
 kaare: Kaare Rasmussen
 kd: Kieren Diment <diment@gmail.com>
 konobi: Scott McWhirter <konobi@cpan.org>
+Lasse Makholm <lasse@unity3d.com>
 lejeunerenard: Sean Zellmer <sean@lejeunerenard.com>
 littlesavage: Alexey Illarionov <littlesavage@orionet.ru>
 lukes: Luke Saunders <luke.saunders@gmail.com>
